major style fixes. Hope for final version

--- a/thesis/chapter_three.tex
+++ b/thesis/chapter_three.tex
@@ -1,6 +1,7 @@
 \section{Особенности реализации}
 \label{sec:impl}
-В этом разделе мы опишем язык, с помощью которого формализовывались все представления. Для каждого представления мы опишем тонкие моменты, с которыми пришлось иметь дело в ходе выполнения работы.
+
+В этом разделе мы опишем язык, с помощью которого формализовывались все представления. Для каждого представления мы опишем тонкие моменты, с которыми пришлось иметь дело в ходе выполнения работы. Для начала мы опишем как формализовывались неименованное и монадическое представление и закончим описанием трудностей, с которыми мы столкнулись при формализации именованного представления.
 
 \input{chapter_three/vclang}
 \input{chapter_three/index_impl}
