--- a/thesis/intro.tex
+++ b/thesis/intro.tex
@@ -1,19 +1,19 @@
 \section*{Введение}
 
-Верификация программного обеспечения используется в важнейших отраслях индустрии разработки программного обеспечения и включает в себя формальные рассуждения о программах и их свойствах. Так как языки программирования используют имена для идентификации сущностей(данные, функции и другие конструкции), то в программах зачастую возникают проблема коллизий. Она заключается в том, что разные сущности идентифицируются одним именем.
+Верификация программного обеспечения используется в важнейших отраслях индустрии разработки программного обеспечения и включает в себя формальные рассуждения о программах и их свойствах. Так как языки программирования используют имена для идентификации сущностей (данные, функции и другие конструкции), то в программах зачастую возникают проблема коллизий имен. Она заключается в том, что разные сущности идентифицируются одним именем.
 
-Языки программирования или средства для разработки пытаются сами решить эту проблему. Например анализатор кода в среде разработки может подсказать о том, что такое имя уже занято и программисту следует придумать новое. Некоторые языки разрешают имена с помощью системы модулей(или пространств имен, как например в языке C++).
+Языки программирования или средства для разработки пытаются сами решить эту проблему. Например анализатор кода в среде разработки может подсказать о том, что такое имя уже занято и программисту следует придумать новое. Некоторые языки разрешают имена с помощью системы модулей (или пространств имен, как например в языке C++).
 
 Более того, иногда возникает желание рассматривать конструкции в языке программирования с точностью до имен параметров. Это полезно, например, при поиске фрагментов кода, которые производят одинаковые вычисления или подчиняются некоторому общему шаблону. Пример таких фрагментов -- всевозможные циклы и обходы контейнеров.
 
-Соответственно, для того, чтобы доказывать какие-либо свойства программ необходима формальная система, позволяющая решать проблемы коллизий имен и формально описывающая отношение так называемой $\alpha$-эквивалентности -- эквивалентности в поведении конструкций с разными именами формальных параметров. Пример такой системы -- это $\lambda$-исчисление, лежащее в основе функциональных языков программирования. С помощью фундаментальной операции подстановки, мы можем не только записывать лямбда-выражения\footnote{Далее мы будем использовать термины <<лямбда-терм>>, <<$\lambda$-терм>>, <<лямбда-выражение>>, полагая их синонимами.}, но и сокращать их, другими словами, мы можем осуществлять процесс вычисления. Естественно, что операция подстановки удовлетворяет некоторым базовым свойствам, которые мы опишем далее.
+Соответственно, для того, чтобы доказывать какие-либо свойства программ необходима формальная система, позволяющая решать проблемы коллизий имен и формально описывающая отношение так называемой $\alpha$-эквивалентности -- эквивалентности в поведении конструкций с разными именами формальных параметров. Пример такой системы -- это $\lambda$-исчисление, лежащее в основе функциональных языков программирования. С помощью фундаментальной операции подстановки, мы можем не только записывать лямбда-выражения\footnote{Далее мы будем использовать термины <<лямбда-терм>>, <<$\lambda$-терм>>, <<лямбда-выражение>>, полагая их синонимами.}, но и сокращать их. Другими словами, мы можем осуществлять процесс вычисления. Естественно, что операция подстановки удовлетворяет некоторым базовым свойствам, которые мы опишем далее.
 
-Существуют различные представления этой системы, по-разному решающие описанные выше проблемы. Например, в именованном представлении у переменных есть имена и нам нужно рассматривать выражения с точностью до имен параметров функций. Существует неименованное представление, в котором, например, переменная -- это индекс в некотором глобальном хранилище переменных. Эти идеи можно обобщить и рассуждать о выражениях, используя методы теории категорий.
+Существуют различные представления этой системы, по-разному решающие описанную выше проблему. Например, в именованном представлении у переменных есть имена и нам нужно рассматривать выражения с точностью до имен параметров функций. Существует неименованное представление, в котором, например, переменная -- это индекс в некотором глобальном хранилище переменных. Эти идеи можно обобщить и рассуждать о выражениях, используя методы теории категорий.
 
-В работе делается попытка установить равенство между различными представлениями этой системы. Для этого мы планируем реализовать с помощью системы автоматического доказательства теорем эти представления, построить соответствия между этими представлениями и доказать их взаимно-однозначность.
+В работе делается попытка установить равенство между различными представлениями этой системы. Для этого мы реализуем с помощью системы автоматического доказательства теорем эти представления, и построим между ними взаимно-однозначные соответствия.
 
-В первой главе будет дан анализ предметной области, краткое описание $\lambda$-исчисления. Мы обозначим цель работы и задачи, решение которых необходимо для её достижения. Кроме того, будут рассмотрены уже существующие решения и описаны их отличия от представленного в работе.
+В первой главе дан анализ предметной области и краткое описание $\lambda$-исчисления. Обозначена цель работы и задачи, решение которых необходимо для её достижения. Кроме того, рассмотрены уже существующие решения и описаны их отличия от представленного в работе.
 
-Во второй главе будут описаны три представления $\lambda$-термов. Для каждого из представлений мы определим характерные свойства и покажем, почему они верны. Кроме того, мы покажем, что эти представления эквивалентны между собой.
+Во второй главе подробнее описаны три представления $\lambda$-термов. Для каждого из представлений определены и доказаны характерные свойства. Кроме того, показано, что эти представления равны между собой.
 
-В третьей главе предполагается описание деталей реализации. Мы опишем язык, с помощью которого предлагается формализовать рассмотренные во второй главе представления а так же тонкие моменты, с которыми пришлось столкнуться в ходе выполнения работы.
+В третьей главе описаны деталей реализации. Описан язык, с помощью которого формализованы рассмотренные во второй главе представления, а так же тонкие моменты, с которыми пришлось столкнуться в ходе выполнения работы.
