--- a/thesis/outro.tex
+++ b/thesis/outro.tex
@@ -1,9 +1,9 @@
 \section*{Заключение}
 
-В ходе выполнения работы была рассмотрена задача доказательства равенства между различными представлениями лямбда-термов. Для этого мы описали различные представления термов, определили фундаментальную операцию подстановки и описали её свойства. Помимо этого, мы формально доказали равенство описанных ранее представлений с помощью системы автоматического доказательства теорем, что отличает эту работу, от существующих работ на смежную тематику.
+В ходе выполнения работы была рассмотрена задача доказательства равенства между различными представлениями лямбда-термов. Для ее решения мы использовали экспериментальный язык, построенный на новой теории типов, которая, в частности, позволяет описывать некоторые конструкции гораздо более удобным образом, нежели, например, \textbf{Agda}.
 
-Мы формализовали неименованное, монадическое и часть именованного представления термов. Мы выяснили, что с неименованным и монадическим представлением очень удобно работать в том смысле, что формальные определения без особых усилий перекладываются на язык доказателя теорем. Для этого мы использовали экспериментальный язык, построенный на новой теории типов, которая, в частности, позволяет описывать некоторые конструкции гораздо более удобным образом, нежели, например, \textbf{Agda}.
+С помощью этого языка мы реализовали различные представления термов: именованное, неименованное и монадическое. Мы реализовали фундаментальную операцию подстановки и сформулировали её свойства -- унитальность и ассоциативность. мы полностью доказали эти свойства для неименованного и монадических представлений. Для именованного представления небольшая часть доказательств не была доведена до конца в связи с техническими проблемами в самом языке. Помимо этого, мы построили преобразования между этими представлениями и доказали, что они взаимно-обратны, тем самым, показав равенство. Однако следует сделать замечание, что так как для именованного представления термов нам нужен еще и контекст, мы показали эквивалентность между парами из термов и контекстов и неименованными термами.
 
-Однако, работа не лишена недостатков. Технические проблемы в самом языке и сложность именованного представления для формализации привели к тому, что свойство ассоциативности для операции подстановки осталось неформализованным. В качестве решения этой проблемы можно использовать идеи, описанные в теории номинальных множеств. Мы оставим эти идеи, как направление дальнейшего развития работы.
+Один из вариантов развития работы, который может помочь в решении проблем, возникших при формализации именованного представления -- это номинальные множества. Мы оставим его, как направление развития.
 
 Исходный код опубликован в публичном Git-репозитории и доступен по ссылке \url{https://github.com/edgarzhavoronkov/vclang-lib/tree/lambda_calculus/test/LC}
