--- a/thesis/chapter_two.tex
+++ b/thesis/chapter_two.tex
@@ -1,6 +1,6 @@
 \section{Представления \texorpdfstring{$\lambda$}{лямбда}-термов}
 
-В этой главе мы опишем три представления $\lambda$-термов: именованное, неименованное(через индексы Де Брауна) и монадическое. Мы формально опишем, как определяются термы в каждом из представлений, определим характерные свойства для каждого представления и покажем, почему они верны. Кроме того, мы установим соответствие между всеми представлениями.
+В этой главе мы опишем три представления $\lambda$-термов: именованное, неименованное(через индексы Де Брауна) и монадическое. Мы формально опишем, как определяются термы в каждом из представлений, определим характерные свойства для каждого представления и покажем, почему они верны. Кроме того, мы установим взаимно-однозначное соответствие между всеми представлениями.
 
 \input{chapter_two/named}
 \input{chapter_two/debruijn}
