hope for final version of slides

--- a/preso/slides.tex
+++ b/preso/slides.tex
@@ -26,10 +26,9 @@
 \newcommand{\betaeq}{=_{\beta}}
 
 \begin{document}
-\title[]{Реализация сравнения различных представлений \texorpdfstring{$\lambda$}{лямбда}-термов}
+\title[СПб АУ НОЦНТ РАН]{Реализация сравнения различных представлений \texorpdfstring{$\lambda$}{лямбда}-термов}
 \author[Жаворонков Э.А.]{студент: Жаворонков Эдгар\\{\footnotesize\textcolor{gray}{научный руководитель: В.И. Исаев}}}
-\institute{СПб АУ НОЦНТ РАН}
-\date{13/06/2017}
+\date{13 июня 2017 г.}
 
 \frame{\titlepage}
 
@@ -46,8 +45,10 @@
 \begin{frame}\frametitle{Введение(2)}
     \begin{enumerate}
         \item Термы $\lambda$-исчисления имеют несколько способов записи -- представлений
-        \item Существующие работы в этой области либо формализуют только одно представление, либо устанавливают соответствие только между именованным и неименованным представлениями
-        \item В отличии от них, мы рассмотрим три представления и покажем равенство между ними
+        \item Какие-то удобнее для компьютерной реализации, какие-то для рассуждений <<на бумаге>>
+        \item В целом, задача формализации лямбда-исчисления довольно интересна и популярна
+        \item Но существующие работы в этой области, как правило, формализуют какое-то одно представление
+        % \item В отличии от них, мы рассмотрим три представления и покажем эквивалентность между ними
     \end{enumerate}
 \end{frame}
 
@@ -57,7 +58,7 @@
         \item Тонкость заключается в том, что именованные термы рассматриваются с точностью до $\alpha$-эквивалентности
         \item То есть мы рассматриваем фактор-множество и нам хотелось бы уметь удобно описывать их с помощью языка программирования
         \item Возникает вопрос, есть ли язык(теория типов), который позволяет просто конструировать фактор-типы?
-        \item <2-> Да, есть. Он называется Vclang\only<2->\footnote{https://github.com/valis/vclang} и его теоретическая основа -- гомотопическая теория типов с типом интервала. %ссылку на статью или гитхаб?
+        \item <2-> Да, есть. Он называется Vclang\only<2->\footnote{https://github.com/valis/vclang} и его теоретическая основа -- гомотопическая теория типов с типом интервала
     \end{enumerate}
 \end{frame}
 
@@ -73,7 +74,7 @@
           \begin{enumerate}
             \item Именованном
             \item Неименованным
-            \item Монадическим
+            \item Монадическом
           \end{enumerate}
         \item Для каждого представления реализовать операцию подстановки
         \item Формализовать её свойства:
@@ -81,20 +82,21 @@
             \item Унитальность
             \item Ассоциативность
           \end{enumerate}
-        \item Доказать, что описанные в п.1 представления равны между собой
+        \item Построить эквивалентности между описанными в п.1 представлениями
     \end{enumerate}
 \end{frame}
 
-% плохой слайд
+
 \begin{frame}\frametitle{Существующие решения}
     \begin{enumerate}
         \item Задача формализации $\lambda$-исчисления довольно популярна
-        \item В очень большом количестве работ авторы формализуют неименованное представление
+        \item Очень много работ посвящено формализации типизированных вариаций $\lambda$-исчисления
+        \item Во многих работах авторы формализуют неименованное представление
         \item Есть работы, в которых авторы сравнивают именованное и неименованное представление, но не устанавливают, что они равны
     \end{enumerate}
 \end{frame}
 
-% еще по слайду наверное надо добавить на каждое представление
+
 \begin{frame}[fragile=singleslide]\frametitle{Решение. Именованное представление}
     Тип данных для термов:
         \begin{figure}[H]
@@ -117,11 +119,11 @@
 \begin{frame}[fragile=singleslide]\frametitle{Решение. Именованное представление(2)}
     \begin{enumerate}
         \item Все утверждения о подстановке рассматривают термы с точностью до $\alpha$-эквивалентности
-        \item Свойства подстановки формулируются следующим образом:
+        \item Свойства подстановки выглядят следующим образом:
             \begin{align*}
-                &x[x \mapsto t] \alphaeq t\\
-                &t[x \mapsto x] \alphaeq t\\
-                &t[x \mapsto N][y \mapsto M] \alphaeq t[y \mapsto M][x \mapsto N[y \mapsto M]] (x \notin FV(M))
+                x[x \mapsto t] &\alphaeq t\\
+                t[x \mapsto x] &\alphaeq t\\
+                t[x \mapsto N][y \mapsto M] &\alphaeq t[y \mapsto M][x \mapsto N[y \mapsto M]] (x \notin FV(M))
             \end{align*}
         \item Доказываются очень нудной индукцией по структуре терма $t$
     \end{enumerate}
@@ -152,7 +154,7 @@
     \begin{figure}[H]
             \center
             \begin{minted}{haskell}
-            data Term (V : Set) =
+            data Term (V : Set) : Set =
                 Var V
                 | App (Term V) (Term V)
                 | Lam (Term (Maybe V))
@@ -162,7 +164,7 @@
         \item Нетрудно заметить, что это функтор
         \item Чуть менее очевидно, но это монада
         \item \texttt{fmap} -- переименовывает переменные в терме, а ($>>=$) -- это, внезапно, подстановка
-        \item Монадные законы в точности описывают свойства подстановки
+        \item Монадические законы в точности описывают свойства подстановки
     \end{enumerate}
 \end{frame}
 
@@ -172,52 +174,45 @@
         \item Чтобы доказать, что это монада заметим, что есть два способа определить $>>=$
           \begin{enumerate}
             \item По стрелке Клейсли $k : V \to Term\ W$ построить стрелку Клейсли $k : (V + 1) \to Term\ (W + 1)$
-            \item Обобщить сигнатуру $>>= : Term\ V \to (V \to Term\ W) \to Term\ W$ до $>>=' : Term\ (V + n) \to (V \to Term\ W) \to Term\ (W + n)$
+            \item Обобщить сигнатуру $>>=\ : Term\ V \to (V \to Term\ W) \to Term\ W$ до $>>='\ : Term\ (V + n) \to (V \to Term\ W) \to Term\ (W + n)$
           \end{enumerate}
         \item Второй менее удобен, так как всплывают взаимно-рекурсивные определения, с которыми неудобно работать.
     \end{enumerate}
 \end{frame}
 
 
-\begin{frame}[fragile=singleslide]\frametitle{Решение. Равенства между представлениями}
-    TODO:
+\begin{frame}[fragile=singleslide]\frametitle{Решение. Эквивалентности между представлениями}
     \begin{enumerate}
-        \item
-        \item
-        \item
+        \item Чтобы преобразовать именованный терм в неименованный нам не обойтись без контекста и доказательства, что терм определен в контексте
+        \item Обратно, нам не очень важно, в каком контексте будет определен результат, поэтому его можно сгенерировать
+        \item Для монадических и неименованныx термов эквивалентность показывается практически <<в лоб>>
+        \item Имея эквивалентность, мы получаем буквальное равенство между типами, которым можно пользоваться при дальнейших доказательствах
     \end{enumerate}
 \end{frame}
 
 
 \begin{frame}\frametitle{Результаты}
     \begin{enumerate}
-        \item Написаны преобразования:
+        \item Построены биекции:
             \begin{enumerate}
-                \item Из именованных термов в неименованные.
-                \item Из неименованных в монадические.
-                \item И обратно.
+                \item Между именованными термами и неименованными
+                \item Между неименованными термами и монадическими
             \end{enumerate}
-        \item Доказано, что преобразования -- биекции.
-        \item Для именованных термов описана $\alpha$-эквивалентность.
-        \item Для каждого представления определена операция подстановки.
-        \item Для каждого представления доказаны свойства термов:
-            \begin{enumerate}
-                \item Преобразование именованного терма в неименованный уважает $\alpha$-эквивалентность.
-                \item Свойства операции подстановки.
-            \end{enumerate}
+        \item Для именованных термов описана $\alpha$-эквивалентность
+        \item Доказано, что преобразование именованного терма в неименованный уважает $\alpha$-эквивалентность
+        \item Для каждого представления определена операция подстановки
+        \item Для неименованного и монадического представления полностью формализованы свойства подстановки
+          \begin{enumerate}
+              \item Унитальность
+              \item Ассоциативность
+          \end{enumerate}
+        \item Для именованного представления мы столкнулись с некоторыми проблемами
     \end{enumerate}
 \end{frame}
 
-\begin{frame}\frametitle{Недостатки}
-    TODO: может на этом слайде про планы развития написать? Или про них на предыдущем слайде сказать?
-    \begin{enumerate}
-        \item
-        \item
-        \item
-        \item
-        \item
-    \end{enumerate}
-\end{frame}
+% \begin{frame}\frametitle{Дальнейшая работа}
+%     Один из способов решить
+% \end{frame}
 
 \begin{frame}\frametitle{fin}
     \begin{center}
